--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -145,8 +145,17 @@
                         <mux:TabViewItem.IconSource>
                             <mux:SymbolIconSource Symbol="Edit" />
                         </mux:TabViewItem.IconSource>
-                        <StackPanel Orientation="Vertical" Spacing="15">
-                            <Grid ColumnSpacing="10" RowSpacing="5">
+                        <Grid RowSpacing="15">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition />
+                            </Grid.RowDefinitions>
+                            <Grid
+                                Grid.Row="0"
+                                ColumnSpacing="10"
+                                RowSpacing="5">
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="Auto" />
                                     <RowDefinition Height="Auto" />
@@ -194,7 +203,10 @@
                                     Grid.Column="1"
                                     Text="{x:Bind Mode=OneWay, Path=cycloid:Format.Altitude(ViewModel.Track.Points.Total.Descent)}" />
                             </Grid>
-                            <Grid ColumnSpacing="10" RowSpacing="5">
+                            <Grid
+                                Grid.Row="1"
+                                ColumnSpacing="10"
+                                RowSpacing="5">
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="Auto" />
                                     <RowDefinition Height="Auto" />
@@ -251,10 +263,37 @@
                                     Text="{x:Bind Mode=TwoWay, Path=ViewModel.BikerPower}" />
                             </Grid>
                             <Button
+                                Grid.Row="2"
                                 HorizontalAlignment="Stretch"
                                 Command="{x:Bind Mode=OneTime, Path=ViewModel.RecalculateCommand}"
                                 Content="Calculate" />
-                        </StackPanel>
+                            <ListView
+                                x:Name="Differences"
+                                Grid.Row="3"
+                                ItemsSource="{x:Bind Mode=OneWay, Path=ViewModel.CompareSession.Differences}"
+                                ScrollViewer.VerticalScrollBarVisibility="Auto"
+                                ScrollViewer.VerticalScrollMode="Auto"
+                                SelectionChanged="Differences_SelectionChanged">
+                                <ListView.ItemTemplate>
+                                    <DataTemplate x:DataType="cycloid:TrackDifference">
+                                        <Grid>
+                                            <TextBlock Text="{x:Bind Mode=OneWay, Path=cycloid:Format.ShortDistance(Length)}" />
+                                            <TextBlock HorizontalAlignment="Right">
+                                                <Run
+                                                    FontWeight="Bold"
+                                                    Foreground="{x:Bind Mode=OneWay, Path=cycloid:Convert.DifferenceBrush(DistanceDiff)}"
+                                                    Text="{x:Bind Mode=OneWay, Path=cycloid:Format.ShortDistance(DistanceDiff)}" />
+                                                <Run>/</Run>
+                                                <Run
+                                                    FontWeight="Bold"
+                                                    Foreground="{x:Bind Mode=OneWay, Path=cycloid:Convert.DifferenceBrush(AscentDiff)}"
+                                                    Text="{x:Bind Mode=OneWay, Path=cycloid:Format.ShortDistance(AscentDiff)}" />
+                                            </TextBlock>
+                                        </Grid>
+                                    </DataTemplate>
+                                </ListView.ItemTemplate>
+                            </ListView>
+                        </Grid>
                     </mux:TabViewItem>
                     <mux:TabViewItem Header="Sections" IsClosable="false">
                         <mux:TabViewItem.IconSource>
